--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "development": "webpack-dev-server --config webpack.development.js",
-    "build": "webpack --optimize-minimize -p --config webpack.production.js"
+    "development": "NODE_ENV=development webpack-dev-server --config webpack.development.js",
+    "production": "NODE_ENV=production webpack --optimize-minimize -p --config webpack.production.js"
   },
   "author": "Flavio Gortana",
   "license": "ISC",
