--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,7 +3,7 @@
         "browser": true,
         "es6": true
     },
-    "extends": "eslint:recommended",
+    "extends": ["eslint:recommended", "prettier", "prettier/react"],
     "parserOptions": {
         "ecmaFeatures": {
             "experimentalObjectRestSpread": true,
