--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "react-addons-text-content": "0.0.4",
     "react-dom": "^16.2.0",
     "react-file-drop": "^0.1.9",
-    "react-typist": "^2.0.4"
+    "react-typist": "^2.0.4",
+    "webpack-bundle-analyzer": "^2.13.1"
   }
 }
